--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
     <title>Pet Fight</title>
   </head>
   <body>
+    <audio src='./audio.mp3' preload autoplay loop ></audio>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <audio src='./audio.mp3' autoplay loop preload ></audio>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
